- [MQTT] Improved integration with Textual, becoming it's own library

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "forecourt-console"
 dynamic = ["version"]
 description = ''
 readme = "README.md"
-requires-python = ">=3.8"
+requires-python = ">=3.8.1"
 license = "MIT"
 keywords = []
 authors = [
@@ -25,10 +25,10 @@ classifiers = [
   "Programming Language :: Python :: Implementation :: PyPy",
 ]
 dependencies = [
-  "paho-mqtt>=2.1.0",
-  "textual>=3.2.0",
-  "textual-plotext>=1.0.1",
-  "textual-slider>=0.2.0",
+  "paho-mqtt",
+  "textual",
+  "textual-plotext",
+  "textual-slider",
 ]
 
 [project.urls]
